--- a/qrcode.kv
+++ b/qrcode.kv
@@ -5,26 +5,55 @@
     size: self.texture_size
     halign: 'left'
 <FormTInput@TextInput>:
+    canvas.before:
+        Color:
+            rgba: ((2/255), (198/255), (201/255),1) if self.focus else ((2/255), (198/255), (201/255),0.5)
+        Line:
+            width: 0.25
+            rectangle: self.x+ 2, self.y,self.width-2, self.height-2
+        Color:
+            rgba : ((2/255), (198/255), (201/255),0.1)if self.focus else (1,1,1,1)
+        Rectangle:
+            size: (self.width, self.height)
+            pos: (self.x , self.y + 1)
+
+        Color:
+            rgb: 1,1,1
+        Color:
+            rgba: (0,0,0,1) if self.focus else ((2/255), (198/255), (201/255),0.7)
+    background_color: (1,1,1,0.5) if self.focus else (1,1,1,0.5)
     font_size: '14sp'
     size_hint: 1, None
     height: self.minimum_height
     multiline: False
     write_tab: False
-    on_focus: self.background_color= (1,1,1,1)
+
+<InfoInput@TextInput>:
+    background_normal: 'boutton_off.png'
+    background_active: 'boutton_on.png'
+    border: 0, 0, 0, 0
+    background_color: 1,1,1,0.5
+    font_size: '14sp'
+    size_hint: 1, None
+    height: self.minimum_height
+    multiline: False
+    write_tab: False
+
 <FormButton@Button>:
     canvas.before:
         Color:
-            rgba: 2/255, 56/255, 87/255, 1
-        Line:
-            width: 0.2
-            rectangle: self.x, self.y,self.width, self.height
+            rgba : (1,1,1,0.5)
+        Rectangle:
+            size: (self.width, self.height)
+            pos: (self.x , self.y)
+        Color:
+            rgba: ( (2/255), (150/255), (170/255), 0.9)
+    background_color:(0.1,0.2,0.3, 0.5)
     font_size: '16sp'
-    size_hint: 0.7, None
-    size: (1, 30 )
-    bold: True
-    background_color: (0.5, 0.7, 0.5, 0.1)
-    border: 1,1,1,1
-    color: (2/255, 56/255, 87/255, .5)
+    size_hint: None,None
+    size: (150, 30)
+    border: 10,10,10,10
+
 
 <GridForm@GridLayout>:
     rows:2
@@ -49,12 +78,22 @@
         GridForm:
             cols: 2
             rows: 1
-            Label:
-                font_size: '20sp'
-                text: "COULEURWEST-IT.COM | QRCoder"
+            BoxLayout:
+                orientation: 'horizontal'
                 size_hint: 0.9, 1
-                height: 50
-                pos_hint: 0, 0
+                padding: 0,10,0,0
+                Image:
+                    source: '.src/qrcode.png'
+                    size: self.texture_size
+                    size_hint: 0.1, 1
+                    allow_stretch: True
+                    pos_hint_x: {'left':0}
+                Label:
+                    font_size: '20sp'
+                    color: 56/255, 138, 115
+                    text: "COULEURWEST-IT.COM | QRCoder"
+                    size_hint: 0.8, 1
+                    height: 50
             FormButton:
                 text: "X"
                 size_hint: 0.1, 1
@@ -109,13 +148,16 @@
         GridForm:
             rows:1
             cols:2
+            center: 0.5, 0.5
+            size_hint: None, None
+            width: 300
             FormButton:
                 text: 'VCard QRCode'
                 on_press: root.generate_vcard()
             FormButton:
                 text: 'URL QRCode'
                 on_press: root.generate_url()
-    FormTInput:
+    InfoInput:
         id: tracker
         text: root.tracker
         disabled: True
